--- a/_/scss/config/_config.scss
+++ b/_/scss/config/_config.scss
@@ -8,6 +8,10 @@
 //        Colors          //
 //************************//
 
+// #F78429 Orange
+// #3A8B55 Green
+// #54BA4C Green bright
+
 $backgroundC : #121623;
 $mainC : #141721;
 $btnC : #57B667;
@@ -23,6 +27,8 @@ $title2ndC : #484F5E;
 $errorC : #C25555;
 $borderFooterC : #505767;
 $lightboxBackgroundC : #161A29;
+$goUpC : #191C28;
+
 
 
 //************************//
